--- a/src/pages/developer/developer.html
+++ b/src/pages/developer/developer.html
@@ -17,7 +17,7 @@
     <ion-item-divider color="light">Developer Controls</ion-item-divider>
     <ion-item>
       <ion-label>Background Geolocation</ion-label>
-      <ion-toggle [(ngModel)]="GeolocStatus" (ionChange)="toggleBackgroundGeolocation()"></ion-toggle>
+      <ion-toggle [(ngModel)]="GeolocStatus" (ionChange)="toggleBackgroundGeolocation($event)"></ion-toggle>
     </ion-item>
     <ion-item>
       <ion-label>Payroll Periods</ion-label>
