--- a/src/pages/developer/developer.html
+++ b/src/pages/developer/developer.html
@@ -68,4 +68,4 @@
   <button ion-button block color="primary" (tap)="updatePreferences()">Save</button>
   <button ion-button block color="light" type="button" (tap)="cancel()">Cancel</button>
 </ion-content>
-<onsite-tabs></onsite-tabs>
+<!-- <onsite-tabs></onsite-tabs> -->
