--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -70,4 +70,4 @@
   </ion-list>
 </ion-content>
 <ion-digit-keyboard (buttonClick)="onKeyboardButtonClick()" [visible]="keysetup.visible" [width]="keysetup.width" [swipeToHide]="keysetup.swipeToHide"></ion-digit-keyboard>
-<onsite-tabs></onsite-tabs>
+<!-- <onsite-tabs></onsite-tabs> -->
