--- a/src/pages/tech-settings/tech-settings.html
+++ b/src/pages/tech-settings/tech-settings.html
@@ -59,4 +59,4 @@
     <button type="button" ion-button block color="light" (tap)="cancel()">{{'cancel' | translate}}</button>
   </div>
 </ion-content>
-<onsite-tabs *ngIf="mode !== 'modal'"></onsite-tabs>
+<!-- <onsite-tabs *ngIf="mode !== 'modal'"></onsite-tabs> -->
