--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -12,10 +12,7 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding class="page-content settings-page-content">
-  <div class="waiting-clock" *ngIf="!dataReady" (tap)="toggleClock()">
-    <clock></clock>
-  </div>
+<ion-content padding class="page-content settings-page-content" (swipe)="tabServ.handleSwipe($event)" *ngIf="dataReady">
   <ion-list *ngIf="dataReady">
     <ion-item-group>
       <ion-item-divider class="perfectly-normal-divider" color="light">{{'app_info' | translate}}</ion-item-divider>
